# caffe

./: CMakeLists.txt
cmake/: Cuda.cmake  Dependencies.cmake  ProtoBuf.cmake  Targets.cmake
cmake/Modules/: FindGlog.cmake
include/caffe/: filler.hpp  layer.hpp  syncedmem.hpp
include/caffe/util/: cudnn.hpp
src/caffe/: CMakeLists.txt  common.cpp  syncedmem.cpp
src/caffe/greentea/: greentea_math_functions.cpp
src/caffe/layers/: affinity_layer.cpp  base_conv_layer.cpp  hinge_loss_layer.cpp
src/caffe/util/: hdf5.cpp  io.cpp  math_functions.cpp  signal_handler.cpp
tools/: CMakeLists.txt
